--- a/autotests/resources.qrc
+++ b/autotests/resources.qrc
@@ -4,5 +4,6 @@
     <file>app-image.png</file>
     <file>anim-22x22.png</file>
     <file>oxygen.theme</file>
+    <file>breeze.theme</file>
 </qresource>
 </RCC>
