--- a/autotests/resources.qrc
+++ b/autotests/resources.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>test-22x22.png</file>
+    <file>test-32x32.png</file>
     <file>app-image.png</file>
     <file>anim-22x22.png</file>
     <file>oxygen.theme</file>
