use system colors for monochrome icons
Breeze uses stylesheet information to color
its icons with some "named" colors that change
depending from the current system color scheme,
this is already used since some time in the
icons used by the Plasma shell.
But QWidget applications have the same problem,
when the user changes the color scheme from
breeze to breeze dark (or any color scheme),
most of the icons will be black on black.
This patch clones (a bit simplified and taking
only the most "important" colors) the logic
used by Plasma::Svg to color icons with
the stylesheet.

REVIEW:127779

--- a/autotests/resources.qrc
+++ b/autotests/resources.qrc
@@ -6,6 +6,7 @@
     <file>anim-22x22.png</file>
     <file>oxygen.theme</file>
     <file>breeze.theme</file>
+    <file>coloredsvgicon.svg</file>
     <file alias="/icons/themeinresource/index.theme">breeze.theme</file>
     <file alias="/icons/themeinresource/22x22/appsNoContext/someiconintheme.png">test-22x22.png</file>
 </qresource>
