add unit test for QDir::setSearchPaths

--- a/autotests/resources.qrc
+++ b/autotests/resources.qrc
@@ -10,5 +10,6 @@
     <file>nonsquare.svg</file>
     <file alias="/icons/themeinresource/index.theme">breeze.theme</file>
     <file alias="/icons/themeinresource/22x22/appsNoContext/someiconintheme.png">test-22x22.png</file>
+    <file alias="/searchpathdefineddir/iconinspecialsearchpath.svg">coloredsvgicon.svg</file>
 </qresource>
 </RCC>
